implement EventReservationManager